--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <title>Dailyflow</title>
 <head>
-	<link rel="stylesheet" href="/stylesheets/stylesheet.css" type="text/css" />
-	<script src="/jquery-2.0.3.min.js"></script>
+	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+	<script src="js/vendor/jquery-2.0.3.min.js"></script>
 	<script>
 
 			// Code from Dsolver http://www.dsolver.ca/time
