removed erb, named elements

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 </head>
 
 <body>
- <!--  <% weatherapicall = {"coord"=>{"lon"=>-104.98, "lat"=>39.74}, "sys"=>{"message"=>0.0139, "country"=>"US", "sunrise"=>1389795527, "sunset"=>1389830426}, "weather"=>[{"id"=>800, "main"=>"Clear", "description"=>"Sky is Clear", "icon"=>"01d"}], "base"=>"cmc stations", "main"=>{"temp"=>277.75, "humidity"=>24, "pressure"=>1017, "temp_min"=>269.26, "temp_max"=>283.15}, "wind"=>{"speed"=>6.17, "gust"=>10.79, "deg"=>287}, "clouds"=>{"all"=>0}, "dt"=>1389803070, "id"=>5419384, "name"=>"Denver", "cod"=>200} %>
- -->
-
-  <% weatherapicall = HTTParty.get("http://api.openweathermap.org/data/2.5/weather?q=Denver,us&units=imperial") %>
 
 	<div class="container">
 
@@ -19,28 +15,24 @@
 		</div>
 
 		<div class="citydate" >
-			<%= "#{weatherapicall["name"]}, #{"#{Date::MONTHNAMES[Date.today.month]} #{Time.now.day}"}" %>
+			<span id="city-name"></span>, <span id="current-date"></span>
 		</div>
 
 		<div class="temper">
-			<%=  "#{weatherapicall["main"]["temp"]}<sup>°F</sup>" %>
+			<span id="current-temp"></span><sup>&deg;F</sup>
 		</div>
 
 		<div class="info">
-			<% a = Indexkey.new
-			index = a.gimme %>
-			<% weatherid = weatherapicall["weather"][0]["id"] %>
-			<%= index[weatherid.to_s].capitalize %>
+			<span id="weather-description"></span>
 		</br>
-			<%= "#{weatherid = weatherapicall["main"]["humidity"]} rh%  " %>
-			<%= "#{weatherid = weatherapicall["wind"]["speed"]} m/s" %>
+			<span id="humidity"></span> rh% <span id="wind-speed"></span> m/s
 		</div>
 
 	</div>
 
 	<div id="bottom_div">
 		<div class="legible">
-			<%= weatherapicall = HTTParty.get("http://api.openweathermap.org/data/2.5/weather?q=Denver,us&units=imperial") %></div>
+			<pre id="data"></pre>
 		</div>
 	</div>
 	<script src="js/vendor/jquery-2.0.3.min.js"></script>
