--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		</div>
 	</div>
 	<script src="js/vendor/jquery-2.0.3.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/clock.js"></script>
+	<script src="js/weather.js"></script>
 </body>
 </html>
